Improve parsing and reporting of error in text files, while parsing Turtle and JSONPath.